--- a/public/notifications.html
+++ b/public/notifications.html
@@ -6,145 +6,143 @@
   <title>My Notifications</title>
   <link rel="icon" href="crrengglogo.png" type="image/png" />
 <style>
-  <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    }
+  * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  }
 
-    body {
-      background-color: #1d1d1d;
-    }
+  body {
+    background-color: #2e2e2e;
+  }
 
-    a {
-      text-decoration: none;
-      color: inherit;
-    }
+  a {
+    text-decoration: none;
+    color: inherit;
+  }
 
-    .container {
-      display: flex;
-      height: 100vh;
-    }
-
-    .sidebar {
-      width: 270px;
-      background-color: rgb(247, 201, 155);
-      display: flex;
-      flex-direction: column;
-      padding: 20px;
-      box-shadow: 2px 0 5px rgba(0, 0, 0, 0.2);
-      position: fixed;
-      top: 0;
-      bottom: 0;
-      left: 0;
-      overflow-y: auto;
-      transition: top 0.3s ease-in-out;
-      z-index: 999;
-    }
-
-    .sidebar h2 {
-      margin: 40px 20px 20px 20px;
-      color: black;
-      font-size: 18px;
-      font-weight: bold;
-    }
-
-    .menu {
-      list-style: none;
-      padding: 0;
-    }
-
-    .menu li {
-      list-style: none;
-      margin-bottom: 15px;
-    }
-
-    .menu li a {
-      display: flex;
-      align-items: center;
-      gap: 10px;
-      font-size: 16px;
-      color: black;
-      padding: 12px 20px;
-      border-radius: 8px;
-      transition: all 0.3s ease;
-    }
-
-    .menu li a:hover,
-    .menu li.active a {
-      background-color: #d4d4d4;
-      font-weight: bold;
-      transform: translateX(5px);
-      box-shadow: 0 3px 8px rgba(0, 0, 0, 0.15);
-    }
-
-    .menu li a span {
-      font-size: 18px;
-      transition: transform 0.3s ease;
-    }
-
-    .menu li a:hover span {
-      transform: scale(1.2);
-    }
-
-    .logout {
-      background-color: #f09000;
-      color: white;
-      border: none;
-      padding: 10px 20px;
-      border-radius: 20px;
-      cursor: pointer;
-      font-size: 16px;
-      width: 50%;
-      margin: 20px auto 0;
-      transition: background 0.3s ease;
-    }
-
-    .logout:hover {
-      background-color: #d07900;
-    }
-
-  .main {
-    margin-left: 270px;
-    background-color: #ffffff;
-    padding: 40px;
-    overflow-y: auto;
+  .container {
+    display: flex;
     min-height: 100vh;
-    width: calc(100% - 270px);
+  }
+
+  .sidebar {
+    width: 270px;
+    background-color: rgb(247, 201, 155);
+    display: flex;
+    flex-direction: column;
+    padding: 20px;
+    box-shadow: 2px 0 5px rgba(0, 0, 0, 0.2);
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    z-index: 1000;
+    transition: all 0.3s ease-in-out;
+  }
+
+  .sidebar h2 {
+    margin: 40px 20px 20px 20px;
+    color: black;
+    font-size: 18px;
+    font-weight: bold;
+  }
+
+  .menu {
+    list-style: none;
+    padding: 0;
+  }
+
+  .menu li {
+    margin-bottom: 15px;
+  }
+
+  .menu li a {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    font-size: 16px;
+    color: black;
+    padding: 12px 20px;
+    border-radius: 8px;
     transition: all 0.3s ease;
   }
 
-  .main h2 {
-    color: #333;
-    margin-bottom: 20px;
-    font-size: 24px;
+  .menu li a:hover,
+  .menu li.active a {
+    background-color: #d4d4d4;
+    font-weight: bold;
+    transform: translateX(5px);
+    box-shadow: 0 3px 8px rgba(0, 0, 0, 0.15);
+  }
+
+  .menu li a span {
+    font-size: 18px;
+    transition: transform 0.3s ease;
+  }
+
+  .menu li a:hover span {
+    transform: scale(1.2);
+  }
+
+  .logout {
+    background-color: #f09000;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 20px;
+    cursor: pointer;
+    font-size: 16px;
+    width: 50%;
+    margin: 20px auto 0;
+    transition: background 0.3s ease;
+  }
+
+  .logout:hover {
+    background-color: #d07900;
+  }
+
+  .details-section {
+    flex-grow: 1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #ffffff;
+    padding: 20px;
+    margin-left: 270px;
+    transition: margin-left 0.3s ease;
+    width: 100%;
+  }
+
+  .details-card {
+    background: linear-gradient(135deg, rgba(255,255,255,0.8), rgba(230, 246, 255, 0.9));
+    color: #000;
+    width: 80%;
+    max-width: 800px;
+    padding: 30px;
+    border-radius: 25px;
+    backdrop-filter: blur(8px);
+    box-shadow: 0 12px 20px rgba(0, 0, 0, 0.2), 0 6px 8px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
   }
 
   .notification {
     background: linear-gradient(145deg, #e3f2fd, #ffffff);
-    padding: 18px 20px;
-    margin-bottom: 20px;
+    padding: 16px 18px;
+    margin-bottom: 15px;
     border-left: 6px solid #2196f3;
     border-radius: 12px;
     font-size: 16px;
     line-height: 1.6;
     box-shadow: 0 4px 12px rgba(33, 150, 243, 0.15);
-    transition: transform 0.2s ease;
-  }
-
-  .notification:hover {
-    transform: translateY(-3px);
-    box-shadow: 0 6px 16px rgba(33, 150, 243, 0.2);
   }
 
   .notification time {
     display: block;
     font-size: 13px;
-    color: #666;
-    margin-top: 10px;
-    opacity: 0.8;
+    color: #444;
+    margin-top: 8px;
     font-style: italic;
   }
 
@@ -159,58 +157,42 @@
     font-size: 24px;
     padding: 12px 18px;
     border-radius: 50px;
-    z-index: 9999;
+    z-index: 2000;
     cursor: pointer;
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
   }
 
   @media (max-width: 768px) {
-    .container {
-      flex-direction: column;
-    }
-
     .sidebar {
-      top: -100%;
-      left: 0;
+      transform: translateY(-100%);
       width: 100%;
-      background-color: rgb(247, 201, 155);
-      max-height: 830px;
+      height: 90vh;
       overflow-y: auto;
       position: fixed;
-      z-index: 999;
-      transition: top 0.3s ease-in-out;
-    }
-
-    .sidebar.open {
+      left: 0;
       top: 0;
     }
 
-    .main {
+    .sidebar.open {
+      transform: translateY(0%);
+    }
+
+    .details-section {
       margin-left: 0;
-      width: 100%;
-      padding: 20px;
     }
 
     .mobile-toggle {
       display: block;
     }
   }
-
-  @keyframes fadeIn {
-    from { opacity: 0; transform: translateY(10px); }
-    to { opacity: 1; transform: translateY(0); }
-  }
-
-  .fade-in {
-    animation: fadeIn 0.5s ease forwards;
-  }
 </style>
+
 </head>
 <body>
   <div class="container">
     <!-- Sidebar -->
     <div class="sidebar">
-      <h2><strong>ID:</strong> <span id="userId">Loading...</span></h2>
+      <h2>ID: <span id="userId">Loading...</span></h2>
       <ul class="menu">
         <li><a href="studentdetails.html"><span>📄</span> Student details</a></li>
         <li><a href="editprofile.html"><span>✏️</span> Edit profile</a></li>
@@ -224,13 +206,14 @@
       <button class="logout" onclick="logout()">Logout</button>
     </div>
 
-    <!-- Main Content -->
-    <div class="main">
-      <h2>My Notifications</h2>
-      <div id="notificationList">Loading...</div>
+    <!-- Notification Section -->
+    <div class="details-section">
+      <div class="details-card" id="notificationList">
+        <p>Loading notifications...</p>
+      </div>
     </div>
   </div>
-    <div class="mobile-toggle" onclick="toggleMobileMenu()">☰</div>
+<div class="mobile-toggle" onclick="toggleSidebar()">☰</div>
   <script>
     const userId = localStorage.getItem("userId");
     document.getElementById("userId").textContent = userId || "Unknown";
@@ -252,7 +235,7 @@
         list.innerHTML = "";
         data.notifications.forEach(note => {
           const div = document.createElement("div");
-          div.classList.add("notification", "fade-in");
+          div.classList.add("notification");
           div.innerHTML = `
             ${note.message}
             <time>${new Date(note.date_sent).toLocaleString()}</time>
@@ -264,11 +247,11 @@
         console.error("Error fetching notifications:", err);
         document.getElementById("notificationList").innerHTML = "<p>Error loading notifications.</p>";
       });
-    
-      function toggleMobileMenu() {
+          function toggleSidebar() {
     document.querySelector('.sidebar').classList.toggle('open');
   }
 
+  // Optional: auto-close on link click (mobile only)
   document.querySelectorAll(".menu li a").forEach(link => {
     link.addEventListener("click", () => {
       if (window.innerWidth <= 768) {
@@ -276,7 +259,6 @@
       }
     });
   });
-
     function logout() {
       localStorage.removeItem('userId');
       if ('caches' in window) {
