--- a/public/addstudent.html
+++ b/public/addstudent.html
@@ -6,209 +6,215 @@
   <title>Add Student</title>
   <link rel="icon" href="crrengglogo.png" type="image/png" />
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-  <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    }
+<style>
+  * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  }
 
-    body {
-      background-color: #ffffff;
-      color: #000;
-    }
+  body {
+    background-color: #ffffff;
+    color: #000;
+  }
 
-    a {
-      text-decoration: none;
-      color: inherit;
-    }
+  a {
+    text-decoration: none;
+    color: inherit;
+  }
 
-    .main-container {
-      display: flex;
-      height: 100vh;
-    }
-
-    .sidebar {
-      width: 270px;
-      background-color: rgb(247, 201, 155);
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
-      padding: 20px;
-    }
-
-    .sidebar h2 {
-      margin: 40px 20px 20px 20px;
-      color: black;
-      font-size: 18px;
-    }
-
-    .menu {
-      list-style-type: none;
-      padding: 0;
-    }
-
-    .menu li {
-      list-style: none;
-      margin-bottom: 15px;
-    }
-
-    .menu li a {
-      display: flex;
-      align-items: center;
-      gap: 10px;
-      font-size: 16px;
-      color: black;
-      padding: 12px 20px;
-      border-radius: 8px;
-      transition: all 0.3s ease;
-    }
-
-    .menu li a:hover,
-    .menu li.active a {
-      background-color: #d4d4d4;
-      font-weight: bold;
-      transform: translateX(5px);
-      box-shadow: 0 3px 8px rgba(0, 0, 0, 0.15);
-    }
-
-    .logout {
-      background-color: #f09000;
-      color: white;
-      border: none;
-      padding: 10px 20px;
-      border-radius: 20px;
-      cursor: pointer;
-      font-size: 16px;
-      width: 50%;
-      margin: 20px auto;
-      transition: background 0.3s ease;
-    }
-
-    .logout:hover {
-      background-color: #d07900;
-    }
-
-    .main {
-      flex-grow: 1;
-      background-color: white;
-      padding: 40px;
-      overflow-y: auto;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
-
-    .form-box {
-      background: linear-gradient(135deg, rgba(54, 169, 225, 0.85), rgba(30, 130, 190, 0.85));
-      padding: 35px 30px;
-      border-radius: 20px;
-      max-width: 600px;
-      width: 100%;
-      backdrop-filter: blur(8px);
-      -webkit-backdrop-filter: blur(8px);
-      color: white;
-      box-shadow: 0 12px 20px rgba(0, 0, 0, 0.3), 0 6px 8px rgba(0, 0, 0, 0.22);
-      max-height: 90vh;
-      overflow-y: auto;
-    }
-
-    .form-box h2 {
-      text-align: center;
-      margin-bottom: 20px;
-    }
-
-    .form-box label {
-      display: block;
-      margin: 10px 0 5px;
-      font-weight: bold;
-    }
-
-    .form-box input,
-    .form-box select {
-      width: 100%;
-      padding: 10px;
-      margin-bottom: 10px;
-      border-radius: 6px;
-      border: none;
-      font-size: 14px;
-      color: #000;
-    }
-
-    .form-box button {
-      width: 100%;
-      padding: 12px;
-      background-color: #1D73D2;
-      color: white;
-      border: none;
-      font-size: 16px;
-      font-weight: bold;
-      border-radius: 8px;
-      cursor: pointer;
-      margin-top: 10px;
-    }
-
-    .form-box button:hover {
-      background-color: #155ea8;
-    }
-
-    .message {
-      text-align: center;
-      margin-top: 10px;
-      font-weight: bold;
-    }
-    .mobile-toggle {
-  display: none;
-  position: fixed;
-  bottom: 20px;
-  left: 50%;
-  transform: translateX(-50%);
-  background-color: #1f75cb;
-  color: white;
-  font-size: 24px;
-  padding: 12px 18px;
-  border-radius: 50px;
-  z-index: 9999;
-  cursor: pointer;
-  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
-}
-
-@media (max-width: 768px) {
   .main-container {
-    flex-direction: column;
+    display: flex;
+    min-height: 100vh;
   }
 
   .sidebar {
+    width: 270px;
+    background-color: rgb(247, 201, 155);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 20px;
     position: fixed;
-    top: -100%;
+    top: 0;
+    bottom: 0;
     left: 0;
-    width: 100%;
-    max-height: 90vh;
-    transition: top 0.3s ease-in-out;
     z-index: 1000;
+    transition: all 0.3s ease-in-out;
   }
 
-  .sidebar.open {
-    top: 0;
+  .sidebar h2 {
+    margin: 40px 20px 20px 20px;
+    color: black;
+    font-size: 18px;
+  }
+
+  .menu {
+    list-style-type: none;
+    padding: 0;
+  }
+
+  .menu li {
+    margin-bottom: 15px;
+  }
+
+  .menu li a {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    font-size: 16px;
+    color: black;
+    padding: 12px 20px;
+    border-radius: 8px;
+    transition: all 0.3s ease;
+  }
+
+  .menu li a:hover,
+  .menu li.active a {
+    background-color: #d4d4d4;
+    font-weight: bold;
+    transform: translateX(5px);
+    box-shadow: 0 3px 8px rgba(0, 0, 0, 0.15);
+  }
+
+  .logout {
+    background-color: #f09000;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 20px;
+    cursor: pointer;
+    font-size: 16px;
+    width: 50%;
+    margin: 20px auto;
+    transition: background 0.3s ease;
+  }
+
+  .logout:hover {
+    background-color: #d07900;
   }
 
   .main {
-    margin-left: 0;
-    padding: 20px;
+    flex-grow: 1;
+    background-color: white;
+    padding: 40px;
+    overflow-y: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: 270px;
+    transition: margin-left 0.3s ease;
   }
 
   .form-box {
-    padding: 25px;
+    background: linear-gradient(135deg, rgba(54, 169, 225, 0.85), rgba(30, 130, 190, 0.85));
+    padding: 35px 30px;
+    border-radius: 20px;
+    max-width: 600px;
     width: 100%;
+    backdrop-filter: blur(8px);
+    color: white;
+    box-shadow: 0 12px 20px rgba(0, 0, 0, 0.3), 0 6px 8px rgba(0, 0, 0, 0.22);
+    max-height: 90vh;
+    overflow-y: auto;
+  }
+
+  .form-box h2 {
+    text-align: center;
+    margin-bottom: 20px;
+  }
+
+  .form-box label {
+    display: block;
+    margin: 10px 0 5px;
+    font-weight: bold;
+  }
+
+  .form-box input,
+  .form-box select {
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 10px;
+    border-radius: 6px;
+    border: none;
+    font-size: 14px;
+    color: #000;
+  }
+
+  .form-box button {
+    width: 100%;
+    padding: 12px;
+    background-color: #1D73D2;
+    color: white;
+    border: none;
+    font-size: 16px;
+    font-weight: bold;
+    border-radius: 8px;
+    cursor: pointer;
+    margin-top: 10px;
+  }
+
+  .form-box button:hover {
+    background-color: #155ea8;
+  }
+
+  .message {
+    text-align: center;
+    margin-top: 10px;
+    font-weight: bold;
   }
 
   .mobile-toggle {
-    display: block;
+    display: none;
+    position: fixed;
+    bottom: 20px;
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: #1f75cb;
+    color: white;
+    font-size: 24px;
+    padding: 12px 18px;
+    border-radius: 50px;
+    z-index: 2000;
+    cursor: pointer;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
   }
-}
 
-  </style>
+  @media (max-width: 768px) {
+    .main-container {
+      flex-direction: column;
+    }
+
+    .sidebar {
+      width: 100%;
+      height: 90vh;
+      top: -100%;
+      left: 0;
+      position: fixed;
+      overflow-y: auto;
+      transition: top 0.3s ease-in-out;
+    }
+
+    .sidebar.open {
+      top: 0;
+    }
+
+    .main {
+      margin-left: 0;
+      padding: 20px;
+    }
+
+    .form-box {
+      padding: 25px;
+    }
+
+    .mobile-toggle {
+      display: block;
+    }
+  }
+</style>
+
 </head>
 <body>
   <div class="main-container">
