--- a/public/staffsettings.html
+++ b/public/staffsettings.html
@@ -5,224 +5,228 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Staff Settings</title>
   <link rel="icon" href="crrengglogo.png" type="image/png" />
-  <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    }
+<style>
+  * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  }
 
-    body {
-      background-color: #1d1d1d;
-      color: #000;
-    }
+  body {
+    background-color: #1d1d1d;
+    color: #000;
+  }
 
-    a {
-      text-decoration: none;
-      color: inherit;
-    }
+  a {
+    text-decoration: none;
+    color: inherit;
+  }
 
-    .main-container {
-      display: flex;
-      height: 100vh;
-    }
-
-    .sidebar {
-      width: 270px;
-      background-color: rgb(247, 201, 155);
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
-      padding: 20px;
-    }
-
-    .sidebar h2 {
-      margin: 40px 20px 20px 20px;
-      color: black;
-      font-size: 18px;
-    }
-
-    .menu {
-      list-style-type: none;
-      padding: 0;
-    }
-
-    .menu li {
-      list-style: none;
-      margin-bottom: 15px;
-    }
-
-    .menu li a {
-      display: flex;
-      align-items: center;
-      gap: 10px;
-      font-size: 16px;
-      color: black;
-      padding: 12px 20px;
-      border-radius: 8px;
-      transition: all 0.3s ease;
-    }
-
-    .menu li a:hover,
-    .menu li.active a {
-      background-color: #d4d4d4;
-      font-weight: bold;
-      transform: translateX(5px);
-      box-shadow: 0 3px 8px rgba(0, 0, 0, 0.15);
-    }
-
-    .menu li a span {
-      font-size: 18px;
-      transition: transform 0.3s ease;
-    }
-
-    .menu li a:hover span {
-      transform: scale(1.2);
-    }
-
-    .logout {
-      background-color: #f09000;
-      color: white;
-      border: none;
-      padding: 10px 20px;
-      border-radius: 20px;
-      cursor: pointer;
-      font-size: 16px;
-      width: 50%;
-      margin: 20px auto;
-      transition: background 0.3s ease;
-    }
-
-    .logout:hover {
-      background-color: #d07900;
-    }
-
-    .main {
-      flex-grow: 1;
-      background-color: white;
-      padding: 40px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
-
-.form {
-  background: linear-gradient(135deg, rgba(54, 169, 225, 0.85), rgba(30, 130, 190, 0.85));
-  padding: 40px;
-  border-radius: 20px;
-  width: 100%;
-  max-width: 500px;
-  color: white;
-  backdrop-filter: blur(8px);
-  -webkit-backdrop-filter: blur(8px);
-  box-shadow: 0 12px 20px rgba(0, 0, 0, 0.3), 0 6px 8px rgba(0, 0, 0, 0.22);
-  transition: transform 0.3s ease, box-shadow 0.3s ease;
-}
-
-.form:hover {
-  transform: scale(1.01);
-  box-shadow: 0 16px 28px rgba(0, 0, 0, 0.35);
-}
-
-
- .settings-box {
-  background-color: rgba(255, 255, 255, 0.95);
-  border-radius: 15px;
-  padding: 25px 30px;
-  box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.1);
-  transition: box-shadow 0.3s ease;
-}
-
-.settings-box:hover {
-  box-shadow: inset 0 0 15px rgba(0, 0, 0, 0.15);
-}
-
-
-    .settings-box ul {
-      list-style: none;
-      padding: 0;
-      margin: 0;
-    }
-
-    .settings-box li {
-      margin-bottom: 15px;
-    }
-
- .settings-box li a {
-  display: flex;
-  align-items: center;
-  font-size: 16px;
-  padding: 12px 15px;
-  border-radius: 8px;
-  transition: all 0.3s ease;
-  color: #1d1d1d;
-  background-color: rgba(255, 255, 255, 0.6);
-}
-
-.settings-box li a:hover {
-  background-color: #e3eef7;
-  font-weight: bold;
-  transform: translateX(5px);
-  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.1);
-}
-
-    .settings-box li a i,
-    .settings-box li a span {
-      margin-right: 10px;
-      font-size: 18px;
-    }
-    .mobile-toggle {
-  display: none;
-  position: fixed;
-  bottom: 20px;
-  left: 50%;
-  transform: translateX(-50%);
-  background-color: #1f75cb;
-  color: white;
-  font-size: 24px;
-  padding: 12px 18px;
-  border-radius: 50px;
-  z-index: 9999;
-  cursor: pointer;
-  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
-}
-
-@media (max-width: 768px) {
   .main-container {
-    flex-direction: column;
+    display: flex;
+    min-height: 100vh;
   }
 
   .sidebar {
+    width: 270px;
+    background-color: rgb(247, 201, 155);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 20px;
     position: fixed;
-    width: 100%;
-    top: -100%;
+    top: 0;
+    bottom: 0;
     left: 0;
-    max-height: 90vh;
-    transition: top 0.3s ease-in-out;
     z-index: 1000;
+    transition: all 0.3s ease-in-out;
   }
 
-  .sidebar.open {
-    top: 0;
+  .sidebar h2 {
+    margin: 40px 20px 20px 20px;
+    color: black;
+    font-size: 18px;
+  }
+
+  .menu {
+    list-style-type: none;
+    padding: 0;
+  }
+
+  .menu li {
+    margin-bottom: 15px;
+  }
+
+  .menu li a {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    font-size: 16px;
+    color: black;
+    padding: 12px 20px;
+    border-radius: 8px;
+    transition: all 0.3s ease;
+  }
+
+  .menu li a:hover,
+  .menu li.active a {
+    background-color: #d4d4d4;
+    font-weight: bold;
+    transform: translateX(5px);
+    box-shadow: 0 3px 8px rgba(0, 0, 0, 0.15);
+  }
+
+  .menu li a span {
+    font-size: 18px;
+    transition: transform 0.3s ease;
+  }
+
+  .menu li a:hover span {
+    transform: scale(1.2);
+  }
+
+  .logout {
+    background-color: #f09000;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 20px;
+    cursor: pointer;
+    font-size: 16px;
+    width: 50%;
+    margin: 20px auto;
+    transition: background 0.3s ease;
+  }
+
+  .logout:hover {
+    background-color: #d07900;
   }
 
   .main {
-    margin-left: 0;
-    padding: 20px;
+    flex-grow: 1;
+    background-color: white;
+    padding: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: 270px;
+    transition: margin-left 0.3s ease;
   }
 
   .form {
+    background: linear-gradient(135deg, rgba(54, 169, 225, 0.85), rgba(30, 130, 190, 0.85));
+    padding: 40px;
+    border-radius: 20px;
     width: 100%;
-    padding: 25px;
+    max-width: 500px;
+    color: white;
+    backdrop-filter: blur(8px);
+    -webkit-backdrop-filter: blur(8px);
+    box-shadow: 0 12px 20px rgba(0, 0, 0, 0.3), 0 6px 8px rgba(0, 0, 0, 0.22);
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+  }
+
+  .form:hover {
+    transform: scale(1.01);
+    box-shadow: 0 16px 28px rgba(0, 0, 0, 0.35);
+  }
+
+  .settings-box {
+    background-color: rgba(255, 255, 255, 0.95);
+    border-radius: 15px;
+    padding: 25px 30px;
+    box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.1);
+    transition: box-shadow 0.3s ease;
+  }
+
+  .settings-box:hover {
+    box-shadow: inset 0 0 15px rgba(0, 0, 0, 0.15);
+  }
+
+  .settings-box ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+  }
+
+  .settings-box li {
+    margin-bottom: 15px;
+  }
+
+  .settings-box li a {
+    display: flex;
+    align-items: center;
+    font-size: 16px;
+    padding: 12px 15px;
+    border-radius: 8px;
+    transition: all 0.3s ease;
+    color: #1d1d1d;
+    background-color: rgba(255, 255, 255, 0.6);
+  }
+
+  .settings-box li a:hover {
+    background-color: #e3eef7;
+    font-weight: bold;
+    transform: translateX(5px);
+    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.1);
+  }
+
+  .settings-box li a i,
+  .settings-box li a span {
+    margin-right: 10px;
+    font-size: 18px;
   }
 
   .mobile-toggle {
-    display: block;
+    display: none;
+    position: fixed;
+    bottom: 20px;
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: #1f75cb;
+    color: white;
+    font-size: 24px;
+    padding: 12px 18px;
+    border-radius: 50px;
+    z-index: 2000;
+    cursor: pointer;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
   }
-}
 
-  </style>
+  @media (max-width: 768px) {
+    .main-container {
+      flex-direction: column;
+    }
+
+    .sidebar {
+      top: -100%;
+      width: 100%;
+      height: 90vh;
+      position: fixed;
+      transition: top 0.3s ease-in-out;
+    }
+
+    .sidebar.open {
+      top: 0;
+    }
+
+    .main {
+      margin-left: 0;
+      padding: 20px;
+    }
+
+    .form {
+      width: 100%;
+      padding: 25px;
+    }
+
+    .mobile-toggle {
+      display: block;
+    }
+  }
+</style>
+
 </head>
 <body>
   <div class="main-container">
