--- a/public/addstudent.html
+++ b/public/addstudent.html
@@ -110,6 +110,7 @@
     align-items: center;
     margin-left: 270px;
     transition: margin-left 0.3s ease;
+    text-decoration: none;
   }
 
   .form-box {
